k8s/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: synapse
  namespace: beacon-node
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - matrix-dev.papers.tech
        - matrix.dev.gke.papers.tech
      secretName: matrix-synapse-prod-tls
  rules:
    - host: matrix-dev.papers.tech
      http:
        paths:
          - backend:
              serviceName: synapse-service
              servicePort: 8008
    - host: matrix.dev.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: synapse-service
              servicePort: 8008
